# order-tracker

./: CLAUDE.md  Cargo.toml  README.md
crates/tracker/: Cargo.toml
crates/tracker-server/: Cargo.toml
crates/tracker-server/examples/tui/: README.md  app.rs  main.rs  ui.rs
crates/tracker-server/examples/web/: README.md  index.html
crates/tracker-server/src/: config.rs  lib.rs  main.rs  metrics.rs  service.rs
crates/tracker-server/src/ingestion/: block_watcher.rs  event_watcher.rs  mod.rs  order_discovery.rs
crates/tracker-server/src/state/: event_store.rs  mod.rs  state_manager.rs  tracked_order.rs
crates/tracker-server/src/ws/: handlers.rs  messages.rs  mod.rs
crates/tracker/src/: amount.rs  error.rs  fill_search.rs  lib.rs  order_diagnostics.rs  order_status.rs  order_tracker.rs  pretty_duration.rs  timestamp.rs  token_symbol_cache.rs
