[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["init4"]
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
signet-tracker = { path = "crates/tracker" }

signet-constants = "0.16.0-rc.13"
signet-orders = "0.16.0-rc.13"
signet-tx-cache = "0.16.0-rc.13"
signet-types = "0.16.0-rc.13"
signet-zenith = "0.16.0-rc.13"

init4-bin-base = "0.18.0-rc.12"

alloy = { version = "1.6.1", features = ["full"] }
axum = { version = "0.8.8", features = ["json", "ws"] }

backon = { version = "1.6.0", features = ["tokio-sleep"] }
eyre = "0.6.12"
futures-util = "0.3.32"
git-version = "0.3.9"
jiff = "0.2.23"
itertools = "0.14.0"
reqwest = "0.12.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full", "macros", "rt-multi-thread", "signal"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
url = "2.5.8"
