[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["init4"]
license = "Apache-2.0 OR MIT"

[workspace.lints.rust]
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
unreachable_pub = "warn"
unused_must_use = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }

[workspace.lints.clippy]
missing_const_for_fn = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.dependencies]
signet-tracker = { path = "crates/tracker" }

signet-constants = "0.16.3"
signet-orders = "0.16.3"
signet-tx-cache = "0.16.3"
signet-types = "0.16.3"
signet-zenith = "0.16.3"
init4-bin-base = "0.19.0"

alloy = { version = "1.8.3", features = ["full"] }
axum = { version = "0.8.8", features = ["json", "ws"] }
backon = { version = "1.6.0", features = ["tokio-sleep"] }
eyre = "0.6.12"
futures-util = "0.3.32"
git-version = "0.3.9"
jiff = "0.2.23"
itertools = "0.14.0"
reqwest = "0.12.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["full", "macros", "rt-multi-thread", "signal"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
url = "2.5.8"

# SDK override - point signet crates at the in-flight stream-combinators branch
# so we can use the new helpers ahead of a release.
[patch.crates-io]
signet-constants = { git = "https://github.com/init4tech/signet-sdk.git", branch = "fraser/eng-1789/stream-combinators" }
signet-orders = { git = "https://github.com/init4tech/signet-sdk.git", branch = "fraser/eng-1789/stream-combinators" }
signet-tx-cache = { git = "https://github.com/init4tech/signet-sdk.git", branch = "fraser/eng-1789/stream-combinators" }
signet-types = { git = "https://github.com/init4tech/signet-sdk.git", branch = "fraser/eng-1789/stream-combinators" }
signet-zenith = { git = "https://github.com/init4tech/signet-sdk.git", branch = "fraser/eng-1789/stream-combinators" }
