[package]
name = "signet-tracker-server"
description = "HTTP/WebSocket API server for Signet order tracking"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "signet-tracker-server"
path = "src/main.rs"

[dependencies]
signet-tracker.workspace = true
signet-constants.workspace = true
signet-tx-cache.workspace = true
signet-types.workspace = true
signet-zenith.workspace = true

init4-bin-base.workspace = true

alloy.workspace = true
axum.workspace = true
backon.workspace = true
eyre.workspace = true
futures-util.workspace = true
git-version.workspace = true
itertools.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
url.workspace = true